force-app/main/default/objects/AcctSeed__Integrity_Report_Entry__c/AcctSeed__Integrity_Report_Entry__c.object-meta.xml
<CustomObject>
    <description>Used to document integrity report results.</description>
    <label>Integrity Report Entry</label>
    <nameField>
        <displayFormat>IRE-{00000}</displayFormat>
        <label>Integrity Report Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrity Report Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>