force-app/main/default/objects/AcctSeed__Integrity_Report_Entry__c/fields/AcctSeed__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Error_Code__c</fullName>
    <label>Error Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>