force-app/main/default/objects/AcctSeed__Integrity_Report_Entry__c/fields/AcctSeed__Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Source_Record_Id__c</fullName>
    <label>Source Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>