force-app/main/default/objects/AcctSeed__Integrity_Report_Entry__c/fields/AcctSeed__Source_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Source_Record_Type__c</fullName>
    <label>Source Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Payable Line</fullName>
            </value>
            <value>
                <fullName>Billing Cash Receipt</fullName>
            </value>
            <value>
                <fullName>Billing Line</fullName>
            </value>
            <value>
                <fullName>Cash Disbursement</fullName>
            </value>
            <value>
                <fullName>Cash Receipt</fullName>
            </value>
            <value>
                <fullName>Inbound Inventory Movement</fullName>
            </value>
            <value>
                <fullName>Journal Entry Line</fullName>
            </value>
            <value>
                <fullName>Manufacturing Order Inventory Movement</fullName>
            </value>
            <value>
                <fullName>Outbound Inventory Movement</fullName>
            </value>
            <value>
                <fullName>Purchase Order Inventory Movement</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>